Add feedback options (#2476)
* Add feedback options

* Update mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -184,12 +184,71 @@ extra:
     provider: google
 # en.begin  
     property: G-7YZEG0W61R
+    feedback:
+      title: Was this page helpful?
+      ratings:
+        - icon: material/emoticon-dead-outline
+          name: The content did not provide the information I was looking for or lacked clarity.
+          data: 1
+          note: >- 
+            Thanks for your feedback! Help us improve this page by
+            submitting a <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a>.
+        - icon: material/emoticon-sad-outline
+          name: The content provided some information, but it did not fully answer my questions.
+          data: 2
+          note: >- 
+            Thanks for your feedback! Help us improve this page by
+            submitting a <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a>.
+        - icon: material/emoticon-neutral-outline
+          name: The content was adequate and provided the basic information I needed.
+          data: 3
+          note: >- 
+            Thanks for your feedback! Help us improve this page by
+            submitting a <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a>.
+        - icon: material/emoticon-happy-outline
+          name: The content was useful and answered most of my questions. 
+          data: 4
+          note: >-
+            Thanks for your feedback! Help us improve this page by
+            submitting a <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a>.        
+        - icon: material/emoticon-excited-outline
+          name: The content was excellent and thoroughly answered my questions.
+          data: 5
+          note: >-
+            Thanks for your feedback! 
 # en.end
 # zh.begin
     property: G-BGGB2REDGM
-# zh.end    
-
-# en.begin  
+    feedback:
+      title: 此页面是否有帮助？
+      ratings:
+        - icon: material/emoticon-dead-outline
+          name: 此页面未提供我所需的信息或不够清晰。
+          data: 1
+          note: >- 
+            感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
+        - icon: material/emoticon-sad-outline
+          name: 此页面提供了一些信息，但未完全解决我的问题。
+          data: 2
+          note: >- 
+            感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
+        - icon: material/emoticon-neutral-outline
+          name: 此页面提供了我所需的基本信息。
+          data: 3
+          note: >- 
+            感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
+        - icon: material/emoticon-happy-outline
+          name: 此页面对我有帮助，解决了我的大部分问题。
+          data: 4
+          note: >-
+            感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
+        - icon: material/emoticon-excited-outline
+          name: 此页面非常有帮助，解决了我的所有问题。
+          data: 5
+          note: >-
+            感谢您的反馈！
+# zh.end 
+# en.begin
 # Cookie consent is required by laws including the General Data Protection Regulation (GDPR) in the EU, and the California Consumer Privacy Act (CCPA) in California, USA.
   consent:
     title: Cookie consent
