--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -254,8 +254,7 @@ extra:
     description: >- 
       We use cookies to recognize your repeated visits and preferences, as well
       as to measure the effectiveness of our documentation and whether users
-      find what they're searching for. With your consent, you're helping us to
-      make our documentation better.       
+      find what they're searching for. With your consent, you're helping us make our documentation better.       
     cookies:
       github:
         name: GitHub
