Update cookie and feedback settings (#2477)
* Update mkdocs.yml

* Update mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,11 +17,9 @@ edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/master/docs-2.0-en/'
 site_name: NebulaGraph Database 手册 
 site_url: https://docs.nebula-graph.com.cn/  
 docs_dir: docs-2.0-zh
+copyright: Copyright &copy; 2018 - 2024 NebulaGraph - 浙ICP备20010487号 
 # Modify this line in each version upgrade release
-edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/master/docs-2.0-zh/'
-copyright: >
-  Copyright &copy; 2018 - 2024 NebulaGraph - 浙ICP备20010487号 - 
-  <a href="#__consent">修改 Cookie 设定</a>
+edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/master/docs-2.0-zh/'  
 # zh.end
 
 repo_name: 'vesoft-inc/nebula'
@@ -229,7 +227,7 @@ extra:
           note: >- 
             感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
         - icon: material/emoticon-sad-outline
-          name: 此页面提供了一些信息，但未完全回答我的问题。
+          name: 此页面提供了一些信息，但未完全解决我的问题。
           data: 2
           note: >- 
             感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
@@ -239,31 +237,24 @@ extra:
           note: >- 
             感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
         - icon: material/emoticon-happy-outline
-          name: 此页面对我有帮助，回答了我的大部分问题。
+          name: 此页面对我有帮助，解决了我的大部分问题。
           data: 4
           note: >-
             感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
         - icon: material/emoticon-excited-outline
-          name: 此页面非常有帮助，回答了我的所有问题。
+          name: 此页面非常有帮助，解决了我的所有问题。
           data: 5
           note: >-
             感谢您的反馈！
 # zh.end 
+# en.begin
 # Cookie consent is required by laws including the General Data Protection Regulation (GDPR) in the EU, and the California Consumer Privacy Act (CCPA) in California, USA.
   consent:
-# en.begin  
     title: Cookie consent
     description: >- 
       We use cookies to recognize your repeated visits and preferences, as well
       as to measure the effectiveness of our documentation and whether users
-      find what they're searching for. With your consent, you're helping us to
-      make our documentation better.
-# en.end
-# zh.begin  
-    title: Cookie 设定
-    description: >- 
-      我们使用 Cookie 识别您的重复访问和偏好，评估您是否找到所需的内容，进而衡量文档的有效性。若您同意我们收集 Cookie，您将会帮助我们改进文档。  
-# zh.end       
+      find what they're searching for. With your consent, you're helping us make our documentation better.       
     cookies:
       github:
         name: GitHub
@@ -273,8 +264,8 @@ extra:
         checked: true  
     actions:
       - accept
-      - manage
-      - reject       
+      - reject  
+# en.end                 
   # branch represents code names (git clone). release represents version number used in texts.
   version:
     provider: mike
