--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -690,6 +690,7 @@ nav:
       - NebulaGraph Operator management: 
         - Customize installation defaults: k8s-operator/3.operator-management/3.1.customize-installation.md
         - Update NebulaGraph Operator: k8s-operator/3.operator-management/3.2.update-operator.md
+        - Manage specific clusters: k8s-operator/3.operator-management/3.5.cluster-scope-config.md
         - Upgrade NebulaGraph Operator: k8s-operator/3.operator-management/3.3.upgrade-operator.md
         - Uninstall NebulaGraph Operator: k8s-operator/3.operator-management/3.4.unistall-operator.md
       - Cluster administration:
@@ -699,7 +700,6 @@ nav:
           - Uninstall clusters: k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md
         - Customize cluster configurations: k8s-operator/4.cluster-administration/4.2.configuration.md
         - Storage management:
-#          - Use local PV: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.1.use-local-pv.md
           - Dynamically expand persistent volumes: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.2.pv-expansion.md
           - Configure PV reclaim: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.3.configure-pv-reclaim.md
         - Log management: k8s-operator/4.cluster-administration/4.5.logging.md
@@ -1047,6 +1047,7 @@ nav:
       - 管理 NebulaGraph Operator: 
         - 自定义安装配置: k8s-operator/3.operator-management/3.1.customize-installation.md
         - 更新配置: k8s-operator/3.operator-management/3.2.update-operator.md
+        - 管理指定集群: k8s-operator/3.operator-management/3.5.cluster-scope-config.md
         - 升级版本: k8s-operator/3.operator-management/3.3.upgrade-operator.md
         - 卸载: k8s-operator/3.operator-management/3.4.unistall-operator.md
       - 管理集群:
@@ -1056,7 +1057,6 @@ nav:
           - 删除集群: k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md
         - 更新配置: k8s-operator/4.cluster-administration/4.2.configuration.md
         - 存储管理:
-#          - 使用本地持久化存储: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.1.use-local-pv.md
           - 动态在线扩容存储卷: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.2.pv-expansion.md
           - 回收 PV: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.3.configure-pv-reclaim.md
         - 日志管理: k8s-operator/4.cluster-administration/4.5.logging.md
