--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -701,6 +701,7 @@ nav:
         - Customize cluster configurations: k8s-operator/4.cluster-administration/4.2.configuration.md
         - Storage management:
           - Dynamically expand persistent volumes: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.2.pv-expansion.md
+          - Use local PV: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.1.use-local-pv.md
           - Configure PV reclaim: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.3.configure-pv-reclaim.md
         - Log management: k8s-operator/4.cluster-administration/4.5.logging.md
         - Security:
@@ -1059,6 +1060,7 @@ nav:
         - 更新配置: k8s-operator/4.cluster-administration/4.2.configuration.md
         - 存储管理:
           - 动态在线扩容存储卷: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.2.pv-expansion.md
+          - 使用本地持久化存储: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.1.use-local-pv.md
           - 回收 PV: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.3.configure-pv-reclaim.md
         - 日志管理: k8s-operator/4.cluster-administration/4.5.logging.md
         - 安全:
