restart cluster pods

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -710,7 +710,7 @@ nav:
           - Self-healing overview: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md
         - Advanced:
           - Optimize leader transfer in rolling updates: k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
-#          - Restart clusters: k8s-operator/4.cluster-administration/4.9.advanced/4.9.2.restart-cluster.md
+          - Restart clusters: k8s-operator/4.cluster-administration/4.9.advanced/4.9.2.restart-cluster.md
       - FAQ: k8s-operator/5.FAQ.md
 
   - Graph computing:
@@ -1068,7 +1068,7 @@ nav:
           - 故障自愈: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md
         - 高阶功能:
           - 优化滚动更新中的 Leader 分布: k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
-#          - 重启集群: k8s-operator/4.cluster-administration/4.9.advanced/4.9.2.restart-cluster.md
+          - 重启集群: k8s-operator/4.cluster-administration/4.9.advanced/4.9.2.restart-cluster.md
       - 常见问题: k8s-operator/5.FAQ.md
 
   - 图计算:
