--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -232,8 +232,9 @@ extra:
     branch: release-3.6
     tag: v3.6.0
   br_ent:
-    release: 3.7.0
-    tag: v3.7.0
+    release: 3.7.1
+    tag: v3.7.1
+    name: NebulaGraph Backup&Restore
   agent:
     release: 3.7.0
     tag: v3.7.0
@@ -258,9 +259,9 @@ extra:
     branch: release-1.2
     tag: v1.2.0
   operator:
-    release: 1.7.5
-    tag: v1.7.5
-    branch: release-1.7
+    release: 1.8.0
+    tag: v1.8.0
+    branch: release-1.8
     upgrade_from: 3.5.0
     upgrade_to: 3.5.x
   exporter:
@@ -735,6 +736,7 @@ nav:
       - NebulaGraph Operator management: 
         - Customize installation defaults: k8s-operator/3.operator-management/3.1.customize-installation.md
         - Update NebulaGraph Operator: k8s-operator/3.operator-management/3.2.update-operator.md
+        - Manage specific clusters: k8s-operator/3.operator-management/3.5.cluster-scope-config.md
         - Upgrade NebulaGraph Operator: k8s-operator/3.operator-management/3.3.upgrade-operator.md
         - Uninstall NebulaGraph Operator: k8s-operator/3.operator-management/3.4.unistall-operator.md
       - Cluster administration:
@@ -747,21 +749,28 @@ nav:
           - Scaling clusters: k8s-operator/4.cluster-administration/4.3.scaling/4.3.1.resizing.md
           - Enable HPA: k8s-operator/4.cluster-administration/4.3.scaling/4.3.2.enable-hpa.md
         - Storage management:
-#          - Use local PV: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.1.use-local-pv.md
           - Dynamically expand persistent volumes: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.2.pv-expansion.md
+          - Use local PV: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.1.use-local-pv.md
           - Configure PV reclaim: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.3.configure-pv-reclaim.md
         - Log management: k8s-operator/4.cluster-administration/4.5.logging.md
-        - Backup and restore: k8s-operator/4.cluster-administration/4.6.backup-and-restore.md
+        - Backup and restore:
+          - Overview: k8s-operator/4.cluster-administration/4.6.backup-and-restore/4.6.0.overview.md
+          - Full backup: k8s-operator/4.cluster-administration/4.6.backup-and-restore/4.6.1.full-backup.md
+          - Incremental backup: k8s-operator/4.cluster-administration/4.6.backup-and-restore/4.6.2.incremental-backup.md
+          - Scheduled backup: k8s-operator/4.cluster-administration/4.6.backup-and-restore/4.6.3.scheduled-backup.md
+          - Enable mTLS backup: k8s-operator/4.cluster-administration/4.6.backup-and-restore/4.6.4.mtls-backup.md
+          - Restore data: k8s-operator/4.cluster-administration/4.6.backup-and-restore/4.6.5.restore.md
         - Security:
           - Enable mTLS: k8s-operator/4.cluster-administration/4.7.security/4.7.1.enable-mtls.md
           - Enable admission control: k8s-operator/4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md
+          - Configure deletion protection: k8s-operator/4.cluster-administration/4.7.security/4.7.3.config-deletion-protection.md
         - HA and balancing:
           - Self-healing overview: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md
           - Enable disaster recovery zones: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.2.enable-zone.md
           - Balance data after scale-out: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.3.balance-data-after-scale-out.md
         - Advanced:
           - Optimize leader transfer in rolling updates: k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
-#          - Restart clusters: k8s-operator/4.cluster-administration/4.9.advanced/4.9.2.restart-cluster.md
+          - Restart clusters: k8s-operator/4.cluster-administration/4.9.advanced/4.9.2.restart-cluster.md
       - FAQ: k8s-operator/5.FAQ.md
 
   - Graph computing:
