--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -796,6 +796,7 @@ nav:
         - NebulaGraph Dashboard Community: 20.appendix/release-notes/dashboard-comm-release-note.md
         - NebulaGraph Dashboard Enterprise: 20.appendix/release-notes/dashboard-ent-release-note.md
         - NebulaGraph Explorer: 20.appendix/release-notes/explorer-release-note.md
+        - NebulaGraph Operator: 20.appendix/release-notes/operator-release-note.md
       - Learning path: 20.appendix/learning-path.md
       - Ecosystem tools: 20.appendix/6.eco-tool-version.md
       - Port guide for company products: 20.appendix/port-guide.md
