Create 4.7.3.config-deletion-protection.md (#336) (#2502)
* Create 4.7.3.config-deletion-protection.md (#336)

* Create 4.7.3.config-deletion-protection.md

* Update 4.7.3.config-deletion-protection.md

* add relatives

* add chinese

* Update mkdocs.yml

* Update 4.7.3.config-deletion-protection.md

* change titles

* Add interlinks

* Update 4.7.2.enable-admission-control.md

* Update 4.7.2.enable-admission-control.md

* typo

* Update 4.7.2.enable-admission-control.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -703,6 +703,7 @@ nav:
         - Log management: k8s-operator/4.cluster-administration/4.5.logging.md
         - Security:
           - Enable admission control: k8s-operator/4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md
+          - Configure deletion protection: k8s-operator/4.cluster-administration/4.7.security/4.7.3.config-deletion-protection.md
         - HA and balancing:
           - Self-healing overview: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md
         - Advanced:
@@ -1062,6 +1063,7 @@ nav:
         - 日志管理: k8s-operator/4.cluster-administration/4.5.logging.md
         - 安全:
           - 开启准入控制: k8s-operator/4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md
+          - 配置删除保护: k8s-operator/4.cluster-administration/4.7.security/4.7.3.config-deletion-protection.md          
         - 高可用和负载均衡:
           - 故障自愈: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md
         - 高阶功能:
