--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -644,6 +644,7 @@ nav:
     - NebulaGraph Java: 14.client/4.nebula-java-client.md
     - NebulaGraph Python: 14.client/5.nebula-python-client.md
     - NebulaGraph Go: 14.client/6.nebula-go-client.md
+    - Community contributed clients: 14.client/contributed-clients.md
 
 
   - Studio:
@@ -1005,6 +1006,7 @@ nav:
     - NebulaGraph Java: 14.client/4.nebula-java-client.md
     - NebulaGraph Python: 14.client/5.nebula-python-client.md
     - NebulaGraph Go: 14.client/6.nebula-go-client.md
+    - 社区贡献的客户端: 14.client/contributed-clients.md
 
   - NebulaGraph Studio:
     - 认识 NebulaGraph Studio:
