add NebulaGraph Lite (#2535) (#2536)
* add NebulaGraph Lite (#2535)

* add NebulaGraph Lite

https://github.com/vesoft-inc/nebula-docs/issues/2526

* Update 8.deploy-nebula-graph-with-lite.md

* Update 8.deploy-nebula-graph-with-lite.md

* update

* update

* update

* update

* update

* Update 8.deploy-nebula-graph-with-lite.md

* Update 8.deploy-nebula-graph-with-lite.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -555,6 +555,7 @@ nav:
           - Install standalone NebulaGraph: 4.deployment-and-installation/standalone-deployment.md
       - Local multi-node installation: 4.deployment-and-installation/2.compile-and-install-nebula-graph/deploy-nebula-graph-cluster.md
       - Install using Docker Compose: 4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
+      - Install using NebulaGraph Lite: 4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
       - Install with ecosystem tools: 4.deployment-and-installation/2.compile-and-install-nebula-graph/6.deploy-nebula-graph-with-peripherals.md
       - Manage Service: 4.deployment-and-installation/manage-service.md
       - Connect to Service: 4.deployment-and-installation/connect-to-nebula-graph.md
@@ -914,6 +915,7 @@ nav:
           - 安装存算合并版服务: 4.deployment-and-installation/standalone-deployment.md
       - 本地多机安装: 4.deployment-and-installation/2.compile-and-install-nebula-graph/deploy-nebula-graph-cluster.md
       - 使用 Docker Compose 安装: 4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
+      - 使用 NebulaGraph Lite 安装: 4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
       - 使用生态工具安装: 4.deployment-and-installation/2.compile-and-install-nebula-graph/6.deploy-nebula-graph-with-peripherals.md      
       - 管理服务: 4.deployment-and-installation/manage-service.md
       - 连接服务: 4.deployment-and-installation/connect-to-nebula-graph.md
