--- a/.github/workflows/deploy-all.yml
+++ b/.github/workflows/deploy-all.yml
@@ -6,8 +6,8 @@ on:
       - 'docs-2.0-zh/**'
       - 'docs-2.0-en/**'
     branches:
-    # Remember to add v before the following version number unless the version is master.
-      - master
+    # Remember to add v before the following version number unless the version is v3.8.0.
+      - v3.8.0
 
 
 jobs:
