--- a/.github/workflows/deploy-en.yml
+++ b/.github/workflows/deploy-en.yml
@@ -1,7 +1,7 @@
 name: Publish English docs via GitHub Pages
 env:
 
-  ACTIONTEST: master # no need to add v before the version number
+  ACTIONTEST: 3.8.0 # no need to add v before the version number
 
 on:
   workflow_call:
@@ -9,7 +9,7 @@ on:
     branches:
     # Remember to add v before the following version number unless the version is master.
 
-      - master
+      - v3.8.0
 
     paths:
       - 'docs-2.0-en/**'
@@ -39,6 +39,6 @@ jobs:
           git fetch origin gh-pages --depth=1 # fix mike's CI update
           mike list
           mike deploy ${{ env.ACTIONTEST }}  -p --rebase
-        #  mike set-default ${{ env.ACTIONTEST }} -p --rebase
+          mike set-default ${{ env.ACTIONTEST }} -p --rebase
         #  mike list
 
