--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ copyright: >
   <a href="#__consent">Change cookie settings</a>
 
 # Modify this line in each version upgrade release
-edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/master/docs-2.0-en/'
+edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.8.0/docs-2.0-en/'
 # en.end
 
 # zh.begin
@@ -19,7 +19,7 @@ site_url: https://docs.nebula-graph.com.cn/
 docs_dir: docs-2.0-zh
 copyright: Copyright &copy; 2018 - 2024 NebulaGraph - 浙ICP备20010487号 
 # Modify this line in each version upgrade release
-edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/master/docs-2.0-zh/'  
+edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.8.0/docs-2.0-zh/'  
 # zh.end
 
 repo_name: 'vesoft-inc/nebula'
@@ -143,7 +143,7 @@ plugins:
 
   - with-pdf:
       copyright: 2023 Vesoft Inc.
-      cover_subtitle: master
+      cover_subtitle: v3.8.0
       cover_logo: 'https://cloud-cdn.nebula-graph.com.cn/nebula-for-pdf.png'            
       cover: true
       back_cover: true
@@ -273,13 +273,13 @@ extra:
     - icon: 'fontawesome/brands/github'
       link: 'https://github.com/vesoft-inc/nebula-docs'
   nebula:
-    release: master
+    release: 3.8.0
     nightly: nightly
     master: master
     base20: 2.0
     base200: 2.0.0
     branch: release-3.6
-    tag: master
+    tag: v3.8.0
     name: NebulaGraph
   studio:
     base111b: 1.1.1-beta
@@ -308,9 +308,9 @@ extra:
     branch: release-3.8
     tag: v3.8.0
   dockercompose:
-    release: 3.6.0
-    branch: release-3.6
-    tag: v3.6.0
+    release: 3.8.0
+    branch: release-3.8
+    tag: v3.8.0
   dashboard:
     release: 3.4.0
     tag: v3.4.0
@@ -325,8 +325,8 @@ extra:
     branch: release-3.6
     tag: v3.6.0
   agent:
-    release: 3.7.0
-    tag: v3.7.0
+    release: 3.7.1
+    tag: v3.7.1
   cpp:
     release: 3.8.0
     branch: release-3.8
