--- a/.github/workflows/deploy-zh.yml
+++ b/.github/workflows/deploy-zh.yml
@@ -1,8 +1,8 @@
 name: Publish Chinese docs via GitHub Pages and upload to server
 env:
-# Remember to add v before the following version number unless the version is master.
 
-  ACTIONTEST: master
+
+  ACTIONTEST: 3.8.0
 
 on:
   workflow_call:
@@ -11,8 +11,8 @@ on:
         required: true
   push:
     branches:
-
-      - master
+      # Remember to add v before the following version number unless the version is master.
+      - v3.8.0
 
     paths:
       - 'docs-2.0-zh/**'
@@ -43,7 +43,7 @@ jobs:
           git fetch origin gh-pages-zh --depth=1 # fix mike's CI update
           mike list
           mike deploy ${{ env.ACTIONTEST }} -b gh-pages-zh -p --rebase
-        #  mike set-default ${{ env.ACTIONTEST }} -b gh-pages-zh -p --rebase
+          mike set-default ${{ env.ACTIONTEST }} -b gh-pages-zh -p --rebase
     
       - name: show Chinese git branches
         run: |
