remove-default-3.6.0-after-default-3.8.0

--- a/.github/workflows/deploy-en.yml
+++ b/.github/workflows/deploy-en.yml
@@ -35,6 +35,6 @@ jobs:
           git fetch origin gh-pages --depth=1 # fix mike's CI update
           mike list
           mike deploy ${{ env.ACTIONTEST }}  -p --rebase
-          mike set-default ${{ env.ACTIONTEST }} -p --rebase
-          mike list
+        #  mike set-default ${{ env.ACTIONTEST }} -p --rebase
+        #  mike list
 
