--- a/.github/workflows/deploy-all.yml
+++ b/.github/workflows/deploy-all.yml
@@ -6,7 +6,7 @@ on:
       - 'docs-2.0-zh/**'
       - 'docs-2.0-en/**'
     branches:
-    # Remember to add v before the following version number unless the version is v3.8.0.
+    # Remember to add v before the following version number unless the version is master.
       - v3.8.0
 
 
