--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,7 +115,7 @@ plugins:
   # image lightbox plugin（https://github.com/blueswen/mkdocs-glightbox#usage）
   - glightbox:  
       zoomable: true
-#  - search # This is the original mkdocs search plugin. To use algolia search, comment out this plugin.
+  - search # This is the original mkdocs search plugin. To use algolia search, comment out this plugin.
   - macros:
 # zh.begin  
       include_dir: docs-2.0-zh/reuse/
